	* drivers/serial/serial.c:  Fix a race condition noted by Stefan Kolb.
	  Between the test if the TX buffer is full and entering a critical
	  section, bytes may be removed from the TX buffer making the wait
	  unnecessary.  The unnecessary wait is an inefficiency, but not really
	  a problem.  But with USB CDC/ACM it can be a problem because the
	  entire TX buffer may be emptied when we lose the race.  If that
	  happens that uart_putxmitchar() can hang waiting for data to be
	  removed from an empty TX buffer (2016-07-22).
	* arch/arm/src/stm32 and stm32l4: STM32 F4/L4 RTC ALARM: were enabling
	  interrupts too early in the power-up sequence,  BEFORE the interrupt
	  system was being initialized (2016-07-23).
	* drivers/ioexpander: GPIO driver: Add support for receiving signals
	  from interrupt pins (2016-07-23).
	* drivers/usbdev: USBMSC: Add locks when removing request from queue.
	  From Wolfgang Reissnegger (2016-07-23).
	* drivers/usbdev: USBMSC: Fix reversed logic on waiting for SCSI thread
	  start.  The scsi thread was waiting for the wrong condition. However,
	  this was masked by the fact that the code creating the scsi thread was
	  also holding usbmsc_scsi_lock(priv) while initializing data, hence
	  this lock synchronized the scsi thread start with init completion.
	  From Wolfgang Reissnegger (2016-07-23).
	* arch/arm/src/sam34: SAM3/4 UDP: Fix handling of endpoint RX FIFO
	  banks.  This fixes a race condition where the HW fills a FIFO bank
	  while the SW is busy, resulting in out of sequence USB packets
	  (2016-07-23).

7.18 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* drivers/serial/pty.c, serial.c, usbdev/cdcacm.c, include/nuttx/fs/ioctl.h:
	  Fix FIONWRITE and add FIONSPACE.  All implementations of FIONWRITE
	  were wrong.  FIONWRITE should return the number of bytes waiting in
	  the outgoing send queue, not the free space.  Rather, FIONSPACE should
	  return the free space in the send queue (2016-07-25).