@@ -134,7 +134,6 @@
 #  define BOARD_SDHC_SD4MODE_DIVISOR   SDHC_SYSCTL_DVS_DIV(3)
 #endif
 
-
 /* PWM Configuration */
 /* FTM0 Channels */
 /* Channels can be modified using kinetis_k64pinmux.h */
@@ -145,7 +144,6 @@
 #define GPIO_FTM0_CH3OUT PIN_FTM0_CH3_1
 #define GPIO_FTM0_CH4OUT PIN_FTM0_CH4_1
 #define GPIO_FTM0_CH5OUT PIN_FTM0_CH5_1
-
 
 /* LED definitions ******************************************************************/
 /* The Freedom K64F has a single RGB LED driven by the K64F as follows:
