@@ -12,10 +12,6 @@ CONFIG_HOST_LINUX=y
 # CONFIG_HOST_OSX is not set
 # CONFIG_HOST_WINDOWS is not set
 # CONFIG_HOST_OTHER is not set
-# CONFIG_WINDOWS_NATIVE is not set
-# CONFIG_WINDOWS_CYGWIN is not set
-# CONFIG_WINDOWS_MSYS is not set
-# CONFIG_WINDOWS_OTHER is not set
 
 #
 # Build Configuration
@@ -139,15 +135,11 @@ CONFIG_ARM_HAVE_MPU_UNIFIED=y
 # CONFIG_ARMV7M_HAVE_DCACHE is not set
 # CONFIG_ARMV7M_HAVE_ITCM is not set
 # CONFIG_ARMV7M_HAVE_DTCM is not set
-# CONFIG_ARMV7M_TOOLCHAIN_IARW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_ATOLLIC is not set
+# CONFIG_ARMV7M_TOOLCHAIN_IARL is not set
 # CONFIG_ARMV7M_TOOLCHAIN_BUILDROOT is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODEREDW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYW is not set
-# CONFIG_ARMV7M_TOOLCHAIN_DEVKITARM is not set
-# CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL is not set
-CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIW=y
-# CONFIG_ARMV7M_TOOLCHAIN_RAISONANCE is not set
+# CONFIG_ARMV7M_TOOLCHAIN_CODEREDL is not set
+# CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYL is not set
+CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL=y
 # CONFIG_ARMV7M_HAVE_STACKCHECK is not set
 # CONFIG_ARMV7M_ITMSYSLOG is not set
 
@@ -232,6 +224,10 @@ CONFIG_KINETIS_FTM0=y
 # CONFIG_KINETIS_CRC is not set
 # CONFIG_KINETIS_PDB is not set
 # CONFIG_KINETIS_PIT is not set
+
+#
+# Kinetis FTM PWM Configuration
+#
 CONFIG_KINETIS_FTM0_PWM=y
 CONFIG_KINETIS_FTM0_CHANNEL=2
 
@@ -425,12 +421,6 @@ CONFIG_SIG_SIGUSR2=2
 CONFIG_SIG_SIGALARM=3
 CONFIG_SIG_SIGCONDTIMEDOUT=16
 CONFIG_SIG_SIGWORK=17
-
-#
-# POSIX Message Queue Options
-#
-CONFIG_PREALLOC_MQ_MSGS=4
-CONFIG_MQ_MAXMSGSIZE=32
 # CONFIG_MODULE is not set
 
 #
@@ -621,7 +611,6 @@ CONFIG_SYSLOG_CONSOLE=y
 CONFIG_FS_READABLE=y
 CONFIG_FS_WRITABLE=y
 # CONFIG_FS_NAMED_SEMAPHORES is not set
-CONFIG_FS_MQUEUE_MPATH="/var/mqueue"
 # CONFIG_FS_RAMMAP is not set
 CONFIG_FS_FAT=y
 CONFIG_FAT_LCNAMES=y
@@ -673,7 +662,6 @@ CONFIG_MM_REGIONS=1
 # Binary Loader
 #
 # CONFIG_BINFMT_DISABLE is not set
-# CONFIG_BINFMT_EXEPATH is not set
 # CONFIG_NXFLAT is not set
 # CONFIG_ELF is not set
 CONFIG_BUILTIN=y
@@ -690,7 +678,6 @@ CONFIG_BUILTIN=y
 CONFIG_STDIO_BUFFER_SIZE=64
 CONFIG_STDIO_LINEBUFFER=y
 CONFIG_NUNGET_CHARS=2
-CONFIG_LIB_HOMEDIR="/"
 # CONFIG_LIBM is not set
 # CONFIG_NOPRINTF_FIELDWIDTH is not set
 # CONFIG_LIBC_FLOATINGPOINT is not set
@@ -709,7 +696,6 @@ CONFIG_TASK_SPAWN_DEFAULT_STACKSIZE=2048
 CONFIG_LIBC_TMPDIR="/tmp"
 CONFIG_LIBC_MAX_TMPFILE=32
 CONFIG_ARCH_LOWPUTC=y
-# CONFIG_LIBC_LOCALTIME is not set
 # CONFIG_TIME_EXTENDED is not set
 CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_ARCH_ROMGETC is not set
