@@ -12392,6 +12392,8 @@
 	  banks.  This fixes a race condition where the HW fills a FIFO bank
 	  while the SW is busy, resulting in out of sequence USB packets
 	  (2016-07-23).
+	* Freedom-K64F:  Add PWM support.  From Jordan MacIntyre (2016-07-25).
+
 
 7.18 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>
 
